# Code-explainer

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/api/routes/: call_graph.py  chat.py  rag.py  types.py
src/database/: __init__.py  call_graph_dao.py  chunk_dao.py  neo4j_client.py  repository.py  type_dao.py
src/models/: __init__.py  schemas.py  trace_schemas.py
src/parsers/: __init__.py  fastapi_parser.py  javascript_framework_detector.py  javascript_parser.py  python_parser.py
src/services/: __init__.py  chat_service.py  chunker.py  code_explainer.py  embedder.py  file_scanner.py  import_resolver.py  ingestor.py  repo_loader.py  retriever.py  trace_engine.py
src/tests/: test_main.py
